--- a/meu-projeto/assets/render.yaml
+++ b/meu-projeto/assets/render.yaml
@@ -1,6 +1,6 @@
-  services:
+services:
   - type: web
     name: rengar-api
     env: python
-    buildCommand: ""
-    startCommand: gunicorn app:app
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn app:app"
