--- a/meu-projeto/render.yaml
+++ b/meu-projeto/render.yaml
@@ -1,6 +1,8 @@
-  services:
+services:
   - type: web
     name: rengar-api
     env: python
-    buildCommand: ""
-    startCommand: gunicorn app:app
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn app:app"
+    # Adicione a variável de ambiente GEMINI_API_KEY no painel do Render!
+    # A Render lida com variáveis de ambiente. Não coloque aqui dados sensíveis.
