feat: Tentando restaurar site para estado anterior e resolver 502

--- a/meu-projeto/render.yaml
+++ b/meu-projeto/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: Sitefln7
+    name: rengar-api
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
